--- a/shadow_hand_test.ipynb
+++ b/shadow_hand_test.ipynb
@@ -337,21 +337,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mujoco",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Julia 1.6.7",
+   "language": "julia",
+   "name": "julia-1.6"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.6.7"
   }
  },
  "nbformat": 4,
