--- a/Julia_fmincon_tests/test_mujoco_julia_finger_state copy.ipynb
+++ b/Julia_fmincon_tests/test_mujoco_julia_finger_state copy.ipynb
@@ -9,9 +9,149 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `d:\\CMU\\2024_Spring_Course\\OCRL\\ocrl-piano\\conan_tests`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `D:\\CMU\\2024_Spring_Course\\OCRL\\ocrl-piano\\conan_tests\\Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `D:\\CMU\\2024_Spring_Course\\OCRL\\ocrl-piano\\conan_tests\\Manifest.toml`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Conan/piano project/ocrl-piano/Julia_fmincon_tests`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/Conan/piano project/ocrl-piano/Julia_fmincon_tests/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/Conan/piano project/ocrl-piano/Julia_fmincon_tests/Manifest.toml`\n",
+      "\u001b[91m\u001b[1mERROR: \u001b[22m\u001b[39mLoadError: InitError: UndefVarError: `GR_jll` not defined\n",
+      "Stacktrace:\n",
+      "  [1] \u001b[0m\u001b[1m__init__\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[35mGR.GRPreferences\u001b[39m \u001b[90m~/.julia/packages/GR/SdanO/src/\u001b[39m\u001b[90m\u001b[4mpreferences.jl:64\u001b[24m\u001b[39m\n",
+      "  [2] \u001b[0m\u001b[1mrun_module_init\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mmod\u001b[39m::\u001b[0mModule, \u001b[90mi\u001b[39m::\u001b[0mInt64\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:1134\u001b[24m\u001b[39m\n",
+      "  [3] \u001b[0m\u001b[1mregister_restored_modules\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90msv\u001b[39m::\u001b[0mCore.SimpleVector, \u001b[90mpkg\u001b[39m::\u001b[0mBase.PkgId, \u001b[90mpath\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:1122\u001b[24m\u001b[39m\n",
+      "  [4] \u001b[0m\u001b[1m_include_from_serialized\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mpkg\u001b[39m::\u001b[0mBase.PkgId, \u001b[90mpath\u001b[39m::\u001b[0mString, \u001b[90mocachepath\u001b[39m::\u001b[0mString, \u001b[90mdepmods\u001b[39m::\u001b[0mVector\u001b[90m{Any}\u001b[39m\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:1067\u001b[24m\u001b[39m\n",
+      "  [5] \u001b[0m\u001b[1m_require_search_from_serialized\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mpkg\u001b[39m::\u001b[0mBase.PkgId, \u001b[90msourcepath\u001b[39m::\u001b[0mString, \u001b[90mbuild_id\u001b[39m::\u001b[0mUInt128\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:1581\u001b[24m\u001b[39m\n",
+      "  [6] \u001b[0m\u001b[1m_require\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mpkg\u001b[39m::\u001b[0mBase.PkgId, \u001b[90menv\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:1938\u001b[24m\u001b[39m\n",
+      "  [7] \u001b[0m\u001b[1m__require_prelocked\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90muuidkey\u001b[39m::\u001b[0mBase.PkgId, \u001b[90menv\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:1812\u001b[24m\u001b[39m\n",
+      "  [8] \u001b[0m\u001b[1m#invoke_in_world#3\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4messentials.jl:926\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      "  [9] \u001b[0m\u001b[1minvoke_in_world\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4messentials.jl:923\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      " [10] \u001b[0m\u001b[1m_require_prelocked\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90muuidkey\u001b[39m::\u001b[0mBase.PkgId, \u001b[90menv\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:1803\u001b[24m\u001b[39m\n",
+      " [11] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:1790\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      " [12] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mlock.jl:267\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      " [13] \u001b[0m\u001b[1m__require\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90minto\u001b[39m::\u001b[0mModule, \u001b[90mmod\u001b[39m::\u001b[0mSymbol\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:1753\u001b[24m\u001b[39m\n",
+      " [14] \u001b[0m\u001b[1m#invoke_in_world#3\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4messentials.jl:926\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      " [15] \u001b[0m\u001b[1minvoke_in_world\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4messentials.jl:923\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      " [16] \u001b[0m\u001b[1mrequire\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90minto\u001b[39m::\u001b[0mModule, \u001b[90mmod\u001b[39m::\u001b[0mSymbol\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:1746\u001b[24m\u001b[39m\n",
+      " [17] top-level scope\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m~/.julia/packages/Plots/ju9dp/src/\u001b[39m\u001b[90m\u001b[4mbackends.jl:380\u001b[24m\u001b[39m\n",
+      " [18] \u001b[0m\u001b[1meval\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mboot.jl:385\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      " [19] \u001b[0m\u001b[1m_initialize_backend\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mpkg\u001b[39m::\u001b[0mPlots.GRBackend\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[36mPlots\u001b[39m \u001b[90m~/.julia/packages/Plots/ju9dp/src/\u001b[39m\u001b[90m\u001b[4mbackends.jl:379\u001b[24m\u001b[39m\n",
+      " [20] \u001b[0m\u001b[1mbackend\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mpkg\u001b[39m::\u001b[0mPlots.GRBackend\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[36mPlots\u001b[39m \u001b[90m~/.julia/packages/Plots/ju9dp/src/\u001b[39m\u001b[90m\u001b[4mbackends.jl:244\u001b[24m\u001b[39m\n",
+      " [21] \u001b[0m\u001b[1mbackend\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90msym\u001b[39m::\u001b[0mSymbol\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[36mPlots\u001b[39m \u001b[90m~/.julia/packages/Plots/ju9dp/src/\u001b[39m\u001b[90m\u001b[4mbackends.jl:254\u001b[24m\u001b[39m\n",
+      " [22] \u001b[0m\u001b[1mload_default_backend\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[36mPlots\u001b[39m \u001b[90m~/.julia/packages/Plots/ju9dp/src/\u001b[39m\u001b[90m\u001b[4mbackends.jl:201\u001b[24m\u001b[39m\n",
+      " [23] \u001b[0m\u001b[1mbackend\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[36mPlots\u001b[39m \u001b[90m~/.julia/packages/Plots/ju9dp/src/\u001b[39m\u001b[90m\u001b[4mbackends.jl:232\u001b[24m\u001b[39m\n",
+      " [24] top-level scope\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m~/.julia/packages/Plots/ju9dp/src/\u001b[39m\u001b[90m\u001b[4minit.jl:108\u001b[24m\u001b[39m\n",
+      " [25] \u001b[0m\u001b[1minclude\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mmod\u001b[39m::\u001b[0mModule, \u001b[90m_path\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mBase.jl:495\u001b[24m\u001b[39m\n",
+      " [26] \u001b[0m\u001b[1minclude\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mx\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[36mPlots\u001b[39m \u001b[90m~/.julia/packages/Plots/ju9dp/src/\u001b[39m\u001b[90m\u001b[4mPlots.jl:1\u001b[24m\u001b[39m\n",
+      " [27] top-level scope\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m~/.julia/packages/Plots/ju9dp/src/\u001b[39m\u001b[90m\u001b[4mPlots.jl:176\u001b[24m\u001b[39m\n",
+      " [28] \u001b[0m\u001b[1minclude\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mBase.jl:495\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      " [29] \u001b[0m\u001b[1minclude_package_for_output\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mpkg\u001b[39m::\u001b[0mBase.PkgId, \u001b[90minput\u001b[39m::\u001b[0mString, \u001b[90mdepot_path\u001b[39m::\u001b[0mVector\u001b[90m{String}\u001b[39m, \u001b[90mdl_load_path\u001b[39m::\u001b[0mVector\u001b[90m{String}\u001b[39m, \u001b[90mload_path\u001b[39m::\u001b[0mVector\u001b[90m{String}\u001b[39m, \u001b[90mconcrete_deps\u001b[39m::\u001b[0mVector\u001b[90m{Pair{Base.PkgId, UInt128}}\u001b[39m, \u001b[90msource\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m\n",
+      "\u001b[90m    @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mloading.jl:2222\u001b[24m\u001b[39m\n",
+      " [30] top-level scope\n",
+      "\u001b[90m    @\u001b[39m \u001b[90m\u001b[4mstdin:3\u001b[24m\u001b[39m\n",
+      "during initialization of module GRPreferences\n",
+      "in expression starting at /home/aipex6/.julia/packages/Plots/ju9dp/src/init.jl:108\n",
+      "in expression starting at /home/aipex6/.julia/packages/Plots/ju9dp/src/Plots.jl:1\n",
+      "in expression starting at stdin:3\n"
+     ]
+    },
+    {
+     "ename": "ErrorException",
+     "evalue": "Failed to precompile Plots [91a5bcdd-55d7-5caf-9e0b-520d859cae80] to \"/home/aipex6/.julia/compiled/v1.10/Plots/jl_1ymzPM\".",
+     "output_type": "error",
+     "traceback": [
+      "Failed to precompile Plots [91a5bcdd-55d7-5caf-9e0b-520d859cae80] to \"/home/aipex6/.julia/compiled/v1.10/Plots/jl_1ymzPM\".\n",
+      "\n",
+      "Stacktrace:\n",
+      "  [1] error(s::String)\n",
+      "    @ Base ./error.jl:35\n",
+      "  [2] compilecache(pkg::Base.PkgId, path::String, internal_stderr::IO, internal_stdout::IO, keep_loaded_modules::Bool)\n",
+      "    @ Base ./loading.jl:2468\n",
+      "  [3] compilecache\n",
+      "    @ ./loading.jl:2340 [inlined]\n",
+      "  [4] (::Base.var\"#968#969\"{Base.PkgId})()\n",
+      "    @ Base ./loading.jl:1974\n",
+      "  [5] mkpidlock(f::Base.var\"#968#969\"{Base.PkgId}, at::String, pid::Int32; kwopts::@Kwargs{stale_age::Int64, wait::Bool})\n",
+      "    @ FileWatching.Pidfile /opt/julia-1.10.2/share/julia/stdlib/v1.10/FileWatching/src/pidfile.jl:93\n",
+      "  [6] #mkpidlock#6\n",
+      "    @ /opt/julia-1.10.2/share/julia/stdlib/v1.10/FileWatching/src/pidfile.jl:88 [inlined]\n",
+      "  [7] trymkpidlock(::Function, ::Vararg{Any}; kwargs::@Kwargs{stale_age::Int64})\n",
+      "    @ FileWatching.Pidfile /opt/julia-1.10.2/share/julia/stdlib/v1.10/FileWatching/src/pidfile.jl:111\n",
+      "  [8] #invokelatest#2\n",
+      "    @ ./essentials.jl:894 [inlined]\n",
+      "  [9] invokelatest\n",
+      "    @ ./essentials.jl:889 [inlined]\n",
+      " [10] maybe_cachefile_lock(f::Base.var\"#968#969\"{Base.PkgId}, pkg::Base.PkgId, srcpath::String; stale_age::Int64)\n",
+      "    @ Base ./loading.jl:2983\n",
+      " [11] maybe_cachefile_lock\n",
+      "    @ ./loading.jl:2980 [inlined]\n",
+      " [12] _require(pkg::Base.PkgId, env::String)\n",
+      "    @ Base ./loading.jl:1970\n",
+      " [13] __require_prelocked(uuidkey::Base.PkgId, env::String)\n",
+      "    @ Base ./loading.jl:1812\n",
+      " [14] #invoke_in_world#3\n",
+      "    @ ./essentials.jl:926 [inlined]\n",
+      " [15] invoke_in_world\n",
+      "    @ ./essentials.jl:923 [inlined]\n",
+      " [16] _require_prelocked(uuidkey::Base.PkgId, env::String)\n",
+      "    @ Base ./loading.jl:1803\n",
+      " [17] macro expansion\n",
+      "    @ ./loading.jl:1790 [inlined]\n",
+      " [18] macro expansion\n",
+      "    @ ./lock.jl:267 [inlined]\n",
+      " [19] __require(into::Module, mod::Symbol)\n",
+      "    @ Base ./loading.jl:1753\n",
+      " [20] #invoke_in_world#3\n",
+      "    @ ./essentials.jl:926 [inlined]\n",
+      " [21] invoke_in_world\n",
+      "    @ ./essentials.jl:923 [inlined]\n",
+      " [22] require(into::Module, mod::Symbol)\n",
+      "    @ Base ./loading.jl:1746\n",
+      " [23] eval\n",
+      "    @ ./boot.jl:385 [inlined]\n",
+      " [24] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)\n",
+      "    @ Base ./loading.jl:2076\n",
+      " [25] #invokelatest#2\n",
+      "    @ ./essentials.jl:892 [inlined]\n",
+      " [26] invokelatest\n",
+      "    @ ./essentials.jl:889 [inlined]\n",
+      " [27] (::VSCodeServer.var\"#216#217\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.76.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:19\n",
+      " [28] withpath(f::VSCodeServer.var\"#216#217\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.76.2/scripts/packages/VSCodeServer/src/repl.jl:274\n",
+      " [29] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, params::VSCodeServer.NotebookRunCellArguments)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.76.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:13\n",
+      " [30] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::Dict{String, Any})\n",
+      "    @ VSCodeServer.JSONRPC ~/.vscode/extensions/julialang.language-julia-1.76.2/scripts/packages/JSONRPC/src/typed.jl:67\n",
+      " [31] serve_notebook(pipename::String, outputchannel_logger::Base.CoreLogging.SimpleLogger; crashreporting_pipename::String)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.76.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:139\n",
+      " [32] top-level scope\n",
+      "    @ ~/.vscode/extensions/julialang.language-julia-1.76.2/scripts/notebook/notebook.jl:35"
      ]
     }
    ],
@@ -46,9 +186,8 @@
        "fmincon (generic function with 1 method)"
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -127,14 +266,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "MuJoCo Data object"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `load_model` not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `load_model` not defined\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ ~/Conan/piano project/ocrl-piano/Julia_fmincon_tests/test_mujoco_julia_finger_state.ipynb:2"
+     ]
     }
    ],
    "source": [
