--- a/mujoco_test/inverse_kinematics_shadow_hand.ipynb
+++ b/mujoco_test/inverse_kinematics_shadow_hand.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,6 +10,17 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\Daniel\\Documents\\Python-Projects\\ocrl-piano\\single_finger_free_trajectories\\models\\scene_right_piano_hand.xml\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "mjParseXML: resource not found via provider or OS filesystem: 'C:\\Users\\Daniel\\Documents\\Python-Projects\\ocrl-piano\\single_finger_free_trajectories\\models\\scene_right_piano_hand.xml'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m UNIVERSAL_MODEL_PATH \u001b[38;5;241m=\u001b[39m Path(WIN_MODEL_PATH)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mstr\u001b[39m(UNIVERSAL_MODEL_PATH))\n\u001b[0;32m---> 11\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mmujoco\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mMjModel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_xml_path\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mUNIVERSAL_MODEL_PATH\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m data \u001b[38;5;241m=\u001b[39m mujoco\u001b[38;5;241m.\u001b[39mMjData(model)\n\u001b[1;32m     13\u001b[0m mujoco\u001b[38;5;241m.\u001b[39mmj_forward(model, data)\n",
+      "\u001b[0;31mValueError\u001b[0m: mjParseXML: resource not found via provider or OS filesystem: 'C:\\Users\\Daniel\\Documents\\Python-Projects\\ocrl-piano\\single_finger_free_trajectories\\models\\scene_right_piano_hand.xml'"
      ]
     }
    ],
@@ -31,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
